--- a/HW03.ipynb
+++ b/HW03.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,13 +219,13 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "df[['MACD', 'Signal line']].plot(ax=ax)\n",
-    "df['Adj Close'].plot(ax=ax, alpha=0.25, secondary_y=True, legend=True);\\#MACD => 12-Period EMA- 26-Period EMA # Singal line 9-Perioed EMA of MACD\n",
     "exp1 = df['Close'].ewm(span=12, adjust=False).mean()\n",
     "exp2 = df['Close'].ewm(span=26, adjust=False).mean()\n",
     "df['MACD'] = exp1 - exp2\n",
-    "df['Signal line'] = df['MACD'].ewm(span=9, adjust=False).mean()"
+    "df['Signal line'] = df['MACD'].ewm(span=9, adjust=False).mean()\n",
+    "fig, ax = plt.subplots()\n",
+    "df[['MACD', 'Signal line']].plot(ax=ax)\n",
+    "df['Adj Close'].plot(ax=ax, alpha=0.25, secondary_y=True, legend=True);"
    ]
   }
  ],
